--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,16 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiple" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link ref="style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 </head>
 <body>
 <main>
     <section class="innerBody">
-        <h1>Contact Us</h1>
+        <h1 class="innerBody-title">Contact Us</h1>
         <article>
-            <h3>The Brandeis S&AA team is here to help you to stay connected to Brandeis.</h3>
+            <h3 style="margin-bottom:20px">The Brandeis S&AA team is here to help you to stay connected to Brandeis.</h3>
             <p> You can contact us at <a href="mailto:admissions@brandeis.edu">admissions@brandeis.edu</a> with
                 questions, or
                 call us at 781-736-3500.<br>
