--- a/views/jobs/edit.ejs
+++ b/views/jobs/edit.ejs
@@ -9,7 +9,7 @@
 
 <body>
   <div class="data-form">
-  <h1>Edit Job</h1>
+  <h1 class="data-form-title">Edit Job</h1>
 </div>
 <div style="margin-top:-150px" class="data-form">
   <form method="POST" action="/jobs/<%= job._id %>?_method=PUT">
