--- a/views/jobs/new.ejs
+++ b/views/jobs/new.ejs
@@ -10,7 +10,7 @@
   <form method="POST" action="/jobs/create">
 
   <div class="form-row">
-    <h1>Create New Job</h1>
+    <h1 class="data-form-title">Create New Job</h1>
   </div>
   <div class="form-row">
     <label for="title">Title</label>
