--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -9,7 +9,7 @@
 </head>
 <div class="data-form">
     <form method="POST" action="<%=`/users/${user._id}/update?_method=PUT`%>">
-      <h1>Update Your Profile</h1>
+      <h1 class="data-form-title">Update Your Profile</h1>
 
         <div class="form-row">
           <label for="inputName">Name </label>
