--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -10,7 +10,7 @@
 
 <div class="data-form">
   <form action="/users/create" method="POST">
-    <h1>Register</h1>
+    <h1 class="data-form-title">Register</h1>
     <div class="form-row">
       <label for="inputName">Name </label>
       <input type="text" name="name" id="inputName" placeholder="Name" autofocus />
