--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,5 +1,4 @@
 <head>
-  <title>Nan_Wang_CPA6</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatiple" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 </head>
-<h1 class="data-form"><%= user.name %>'s Profile</h1>
+<h1 class="data-form data-form-title"><%= user.name %>'s Profile</h1>
 
 <div class="user-profile">
 <table>
@@ -62,6 +61,10 @@
   <tr>
     <th>Interests</th>
     <td><%= user.interests %></td>
+  </tr>
+  <tr>
+    <th>ApiToken</th>
+    <td><%= user.apiToken %></td>
   </tr>
 </table>
 <% if (user.subscribedAccount) { %>
