--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiple" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 </head>
@@ -13,7 +13,7 @@
     <main>
 
     <section class="innerBody">
-        <h1>Who we are?</h1>
+        <h1 class="innerBody-title">Who we are?</h1>
         <article>
             <h3>Students & Alumni of <a href="https://www.brandeis.edu/">Brandeis University</a></h3>
             <p>The Brandeis Students and Alumni Association is a vibrant community that offers lifelong opportunities
