--- a/views/jobs/index.ejs
+++ b/views/jobs/index.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiple" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="style.css" type="text/css">
   </head>
 
   <body>
     <div class="innerBody">
-      <h1>Job Posting</h1>
+      <h1 class="innerBody-title">Job Posting</h1>
       <button onclick="location.href='/jobs/new'" id="create-event">
         Create New Job Here!
       </button>
