--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,10 +1,15 @@
+<html>
 <head>
-    <title>Nan_Wang_CPA7</title>
+    <title>BUSAA</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiple" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />    
+    <!-- <link rel="stylesheet" href="/css/user.css" type="text/css"> -->
     <link rel="stylesheet" href="/css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+
 
 </head>
 
@@ -14,10 +19,12 @@
             <img src="/image/BrandeisLogo.png">
         </article>
         <article class="header-name">
-            <h1>Brandeis University</h1>
-            <p>Students & Alumni Association</p>
+            <h1 class="header-name-title">Brandeis University</h1>
+            <p class="header-name-text">Students & Alumni Association</p>
         </article>
     </header>
+
+    <!-- navbar -->
     <nav>
         <a class="nav-a" href="/">Home</a>
         <a class="nav-a" href="/about">About</a>
@@ -26,40 +33,66 @@
         <!-- show all events -->
         <a class="nav-a" href="/events">Events</a>
         <a class="nav-a" href="/contact">Contact</a>
+        <a class="nav-a" href="/chat">Chat</a>
         <!-- show all users -->
         <a class="nav-a" href="/users">Users</a>
+
+          <!-- Latest Events button -->
+        <% if (loggedIn) { %> 
+            <a class="nav-a" style="color:white">       
+                <%- include('./events/_eventsModal') %>
+            </a>
+        <% } %>
+
         <!-- sign in and sign up buttons -->
         <% if (loggedIn) { %> 
+       
             <a class="nav-a nav-login" href="<%= `/users/${currentUser._id}`%>">Hi, <%= currentUser.name %>!</a>
+            <div style="display: none" id="apiToken">
+                <%= currentUser.apiToken %>
+            </div>
             <a href="/users/logout"><button class="nav-button">Logout</button></a>
         <% } else { %>
             <a href="/users/login"><button class="nav-button">Sign In</button></a>
             <a href="/users/new"><button class="nav-button">Sign Up</button></a>
         <% } %>
-
     </nav>
+
+    <!-- flash messages -->
     <div class="flashes">
         <% if (flashMessages) { %> <% if (flashMessages.success) { %>
         <div class="flash success"><%= flashMessages.success %></div>
         <%} else if (flashMessages.error){ %>
         <div class="flash error"><%= flashMessages.error %></div>
         <%} %> <%} %>
-      </div>
+    </div>
 
-    <%- body%>
 
-<footer>
-    <article>
-        <p>@2023 Brandeis University</p>
-    </article>
-    <article class="fa">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-youtube"></a>
+        <%- body%>
 
-    </article>
-</footer>
+
+    <footer class="footer-style">
+        <article style="margin-top:10px">
+            <p>@2023 Brandeis University</p>
+        </article>
+        <article class="fa">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-youtube"></a>
+
+        </article>
+    </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/js/jquery.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="/js/BUSAAApp.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
+
 </body>
+</html>
 
