--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -9,7 +9,7 @@
 
 <div class="data-form">
 <form action="/users/login" method="POST">
-    <h1>Login</h1>
+    <h1 class="data-form-title ">Login</h1>
     <div class="form-row">
     <label for="inputEmail">Email address</label>
     <input
